--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=a2d7ceca52068216f6c5606e5732a54f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://127.0.0.1:3306/doovot?serverVersion=mariadb-10.5.8"
+DATABASE_URL="mysql://root:""@127.0.0.1:3306/doovot?serverVersion=5.7"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
