--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "regenerator-runtime": "^0.13.9",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
-        "vue": "^3",
+        "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
         "vue-template-compiler": "^2.7.14",
         "webpack": "^5.74.0",
@@ -23,5 +23,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.3",
+        "bootstrap-vue": "^2.23.1"
     }
 }
