--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
-        "bootstrap-vue": "^2.23.1"
+        "bootstrap-vue": "^2.23.1",
+        "chart.js": "^4.3.0",
+        "vue-chartjs": "^5.2.0"
     }
 }
