--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/webpack-encore": "^4.0.0",
+        "@symfony/webpack-encore": "^4.3.0",
         "core-js": "^3.23.0",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.0",
         "regenerator-runtime": "^0.13.9",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
-        "vue": "^3.2.47",
-        "vue-loader": "^17.0.1",
+        "vue": "^3.3.2",
+        "vue-loader": "^17.1.1",
         "vue-template-compiler": "^2.7.14",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
@@ -26,6 +28,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
-        "bootstrap-vue": "^2.23.1"
+        "bootstrap-vue": "^2.23.1",
+        "vue-router": "^4.2.0"
     }
 }
