--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
+        "platform": {
+            "php": "8.*"
+        },
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
